  when encryption or slice hashing was used
- fixed bug in dar_manager: archive permutation in database lead libdar
  to check an archive number of range under certain circumstances
- fixed invertion of the condition triggering a warning about archive
  date order in a dar_manager database while moving an archive within a
  database
- fixed typos in documentation
- catalogue memory optimization
- fix configure script to temporarily rely on LIBS rather LDFLAGS to
  check for gpgme availability
- removed order dependency between -A and -9 options of dar_manager: -9
  can now be specified before or after -A option.
- resetting to "false" the "inode_wrote" flag of hard link datastructure
  before testing and merging. Merging a previously tested archive or
  testing a second time would not include hard linked inode in the
  operation. This situation does not occurs with dar but could succeed
  with some external tools that keep the catalogue in memory to perform
  different operations on it.
- fixed bug in the routine that detects existing slices to warn the user
  and/or avoid overwriting, bug that lead dar to "bark" when an archive
  base name started by a + character.
- avoiding to use AM_PATH_GPGME in configure script when gpgme.m4 is not
  available
- adding new methods in libdar API to obtain the archive offset and
  storage size of saved files

from 2.5.2 to 2.5.3
- Fixing a 2.5.x build issue met when a 2.4.x libdar library is already
  installed in an FreeBSD system.
- Improving message and behavior of libdar in lax mod when a truncated
  archive is read
- Fixing self reported bug at "tronconneuse.cpp line 561" met while
  reading truncated/corrupted archive
- Fixed not closed filedescriptors, met when saving a filesystem that has
  not ExtX FSA available
- Fixing configure script to be more robust in front of system where
  gpgme.h is installed in a non standard path and user did not provide
  coherent CPPFLAGS, LDFLAGS before calling ./configure