@@ -3,6 +3,7 @@
 
 
 
+
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>DAR's Limitations</title></head><body style="background-color: rgb(221, 221, 221); color: rgb(0, 0, 170);" alink="#ff0000" link="#0000ff" vlink="#000055">
 <center>
 <table style="width: 90%; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
@@ -116,6 +117,12 @@ version cannot handle dates after year 2106 and file sizes over 4 GB.
 While the 64 bits version cannot handle dates after around 500 billion
 years (which is longer than the estimated age of the Universe: 15
 billion years) and file larger than around 18 EB (18 <a href="usage_notes.html#bytes_bits_kilo">exa bytes</a>). <br>
+      <br>
+Since version 2.5.4 another parameter depends on the maximum supported
+integer number: the number of entries in a given archive. In other
+words, you will not be able to&nbsp; have more than 4 giga files (4
+billion files) in a single archive when using libdar32, 18 exa file
+with libdar64 and no limitation with libdar based on infinint.<br>
       </div>
       <div style="margin-left: 40px;"><br>
       </div>
